--- a/.github/workflows/uv_build_templates.yaml
+++ b/.github/workflows/uv_build_templates.yaml
@@ -53,7 +53,7 @@ jobs:
       run: |
         gcloud auth configure-docker australia-southeast1-docker.pkg.dev
 
-    - name: "Attempt to pull base image"
+    - name: "Attempt to pull base image - attempt to reuse any common build cache"
       continue-on-error: true
       run: |
         docker pull $TEMPLATE_IMAGE:$BASE_TAG
