--- a/skinny_docker_templates/uv_hail_gcloud/Dockerfile
+++ b/skinny_docker_templates/uv_hail_gcloud/Dockerfile
@@ -5,7 +5,7 @@ FROM $BASE_IMAGE
 # https://cloud.google.com/sdk/docs/install#deb
 RUN echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | \
     tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
-    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | \
+    wget -O - https://packages.cloud.google.com/apt/doc/apt-key.gpg | \
     gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg && \
     apt-get update -y && \
     apt-get install google-cloud-cli --no-install-recommends -y && \
