--- a/skinny_docker_templates/uv_hail_only/Dockerfile
+++ b/skinny_docker_templates/uv_hail_only/Dockerfile
@@ -29,6 +29,7 @@ ENV HAIL_QUERY_BACKEND="service"
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
         build-essential \
+        curl \
         g++ \
         gcc \
         libfontconfig \
@@ -57,8 +58,8 @@ RUN uv pip --no-cache-dir install --system \
 FROM basic AS installer
 
 # wheel needs to have a descriptive name, e.g. hail-0.2.133-py3-none-any.whl
-# wildcard expansion would be suppressed in quotes
-COPY --from=builder /hail/hail/build/deploy/dist/hail-*.whl /
-
-RUN uv pip install --system --no-cache-dir \
-        /hail-*-py3-none-any.whl
+# but this isn't knowable exactly from the hash/branch, so we use a wildcard
+# this RUN command binds in the wheel from the build layer without copying it in permanently
+RUN --mount=type=bind,from=builder,source=/hail/hail/build/deploy/dist,target=/wheel \
+    uv pip install --system --no-cache-dir \
+        /wheel/hail-*-py3-none-any.whl
