--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,16 +18,14 @@ repos:
     hooks:
       - id: cpg-id-checker
 
-  - repo: https://github.com/ambv/black
-    rev: 24.2.0
-    hooks:
-      - id: black
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
     rev: v0.3.0
     hooks:
       - id: ruff
+      - id: ruff-format
+
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.9.0
