--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
-[tool.black]
-line-length = 88
-skip-string-normalization = true
-
-
 [tool.ruff]
 line-length = 88
+
+[tool.ruff.format]
+quote-style = "single"
+
 
 [tool.ruff.lint]
 # ignore pydocstyle, flake8-boolean-trap (FBT)
