--- a/web/requirements.in
+++ b/web/requirements.in
@@ -1,7 +1,8 @@
-cpg-utils~=5.0.1
-cryptography==41.0.7
-flask==3.0.0
-gunicorn==21.2.0
+cpg-utils~=5.1
+cryptography~=44.0 # specified explicitly to avoid vuln: GHSA-79v4-65xg-pq4g
+flask~=3.1
+gunicorn~=23.0
 google-api-python-client==2.113.0
 google-cloud-storage==2.14.0
 google-cloud-secret-manager==2.17.0
+requests~=2.32
