--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -16,7 +16,9 @@ jobs:
           cache: 'pip'
           cache-dependency-path: setup.py
       - name: Install from setup.py
-        run: pip install .
+        run: |
+          pip install --no-deps -r requirements-dev.txt
+          pip install .
 
       - uses: pypa/gh-action-pip-audit@v1.1.0
         with:
@@ -52,4 +54,3 @@ jobs:
         with:
           inputs: server/requirements.txt
           summary: true
-
