try different strategy for installing setuptools

--- a/.github/workflows/security.yaml
+++ b/.github/workflows/security.yaml
@@ -16,8 +16,9 @@ jobs:
           cache: 'pip'
           cache-dependency-path: setup.py
       - name: Install from setup.py
+       # match setuptools version in package workflow
         run: |
-          pip install --no-deps -r requirements-dev.txt
+          pip install --upgrade 'setuptools>=69.3.0'
           pip install .
 
       - uses: pypa/gh-action-pip-audit@v1.1.0
