--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -22,7 +22,9 @@ botocore==1.31.56
     #   cpg-utils
     #   s3transfer
 cachetools==5.3.2
-    # via google-auth
+    # via
+    #   -r web/requirements.in
+    #   google-auth
 certifi==2024.7.4
     # via requests
 cffi==1.16.0
