--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -1,5 +1,5 @@
 # This image adds Hail and some other Python-based stats libraries to the base image.
-FROM australia-southeast1-docker.pkg.dev/analysis-runner/images/driver-base:1.5
+FROM australia-southeast1-docker.pkg.dev/analysis-runner/images/driver-base:1.6
 
 ARG HAIL_SHA
 
@@ -34,7 +34,7 @@ RUN apt-get update && \
     cd hail && \
     # Install locally, avoiding the need for a pip package.
     # DEPLOY_REMOTE avoids a dev suffix being appended to dataproc initialization paths.
-    make install DEPLOY_REMOTE=1 HAIL_RELEASE_MODE=1 && \
+    make install DEPLOY_REMOTE=1 HAIL_BUILD_MODE=Release && \
     cd ../.. && \
     rm -rf hail && \
     pip --no-cache-dir install \
