Return to base on Debian bullseye
Hail still requires openjdk-11 specifically, and neither bookworm nor trixie
provides this old version. (Also use libopenblas0 rather than -base, as the
latter is a transitional wrapper package not present in later releases.)

--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -13,7 +13,7 @@ RUN apt-get update && \
         gcc \
         libfontconfig \
         liblapack3 \
-        libopenblas-base \
+        libopenblas0 \
         openjdk-11-jdk-headless \
         rsync \
         software-properties-common && \
