--- a/driver/Dockerfile.base
+++ b/driver/Dockerfile.base
@@ -1,5 +1,5 @@
 # Any analysis-runner driver image must at least include gcloud and git.
-FROM python:3.11-trixie
+FROM python:3.11-bullseye
 
 RUN apt update && apt install -y \
         apt-transport-https \
