--- a/driver/Dockerfile.hail
+++ b/driver/Dockerfile.hail
@@ -34,7 +34,8 @@ RUN apt-get update && \
     cd hail && \
     # Install locally, avoiding the need for a pip package.
     # DEPLOY_REMOTE avoids a dev suffix being appended to dataproc initialization paths.
-    make install DEPLOY_REMOTE=1 HAIL_BUILD_MODE=Release && \
+    # Append -jvm to MILL_VERSION to avoid getting a binary mill artifact built against a too-recent glibc.
+    make install DEPLOY_REMOTE=1 HAIL_BUILD_MODE=Release MILL_VERSION=$(sed -n '/mill-version/s/.*: *//p' build.mill)-jvm && \
     cd ../.. && \
     rm -rf hail && \
     pip --no-cache-dir install \
